--- a/src/App.css
+++ b/src/App.css
@@ -7,14 +7,44 @@
 
 .main-navbar {
   font-family: Karla;
-  font-size: 20.748px;
+
   font-style: normal;
-  font-weight: 700;
+
   line-height: normal;
-  letter-spacing: -2.075px;
+  /* letter-spacing: -2.075px; */
   margin: auto auto;
-  width: 550px;
+  max-width: 650px;
   height: 65px;
   background: linear-gradient(90deg, #672280 1.18%, #a626d3 100%);
   color: #fff !important;
+}
+.navbar-brand-text {
+  font-size: 20.748px;
+  font-weight: 700;
+}
+.navbar-text {
+  /* text-align: right; */
+  font-family: Inter;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+}
+
+.form-content {
+  max-width: 550px;
+  margin: auto auto;
+}
+.text-center {
+  color: var(--gray-700, #374151);
+  font-family: Karla;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 16.375px; /* 116.963% */
+  text-align: left !important;
+}
+
+#submit-button {
+  width: 550px;
 }
